<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/texthasil"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:text="@string/hasil"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="80sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textoperasi"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:text="@string/operasi"
        android:textAlignment="textEnd"
        android:textColor="@color/lightblue"
        android:textSize="50sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/nReset"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/reset"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/red"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
        android:id="@+id/nKurungbuka"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/kurungbuka"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />
        <Button
            android:id="@+id/nKurungtutup"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/kurungtutp"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/nDelete"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/red"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/n7"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/tujuh"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/n8"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/delapan"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/n9"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/sembilan"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/nBagi"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/bagi"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/lightblue"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/n4"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/empat"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/n5"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/lima"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/n6"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/enam"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/nKali"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/kali"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/lightblue"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/n1"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/satu"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/n2"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/dua"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/n3"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/tiga"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/nTambah"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="25dp"
            android:layout_gravity="center"
            android:text="@string/tambah"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/lightblue"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:stateListAnimator="@null"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/n0"
            android:layout_width="75dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:stateListAnimator="@null"
            android:text="@string/nol"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:translationZ="4dp"
            app:cornerRadius="20dp"
            />

        <Button
            android:id="@+id/nDot"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/dot"
            android:gravity="center"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/nSamadengan"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:text="@string/samadengan"
            android:gravity="center"
            android:textSize="50sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/lightblue"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/nKurang"
            android:layout_width="75dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightblue"
            android:elevation="2dp"
            android:stateListAnimator="@null"
            android:text="@string/kurang"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:translationZ="4dp"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>